--- a/k8s/deployment-discoverable-app.yaml
+++ b/k8s/deployment-discoverable-app.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     app: discoverable-app
   name: discoverable-app
+  namespace: dns-demo
+  annotations:
+    kapp.k14s.io/change-rule: "upsert after upserting apps.me.ohughes.k8s-dns-java/namespace"
 spec:
   replicas: 2
   selector:
