--- a/k8s/service-discoverable-app-headless.yaml
+++ b/k8s/service-discoverable-app-headless.yaml
@@ -4,6 +4,9 @@ metadata:
   labels:
     app: discoverable-app-headless
   name: discoverable-app-headless
+  namespace: dns-demo
+  annotations:
+    kapp.k14s.io/change-rule: "upsert after upserting apps.me.ohughes.k8s-dns-java/namespace"
 spec:
   ports:
   - name: http
@@ -12,6 +15,6 @@ spec:
     targetPort: 80
   selector:
     app: discoverable-app-headless
-  type: ClusterIP
+  clusterIP: None
 status:
   loadBalancer: {}
